--- a/construyete.html
+++ b/construyete.html
@@ -1,7 +1,7 @@
 <html>
  <head><title>LECCIONES CONSTRUYETE</head></title>
 <body>
-<center><img src="Encabezado2.PNG" width="1100" height="130"></center>
+<center><img src="Encabezado2.png" width="1100" height="130"></center>
 <center><p><font face="Monotype corsiva" size="5"><b>COLEGIO DE ESTUDIOS CIENTIFICOS Y TECNOLOGICOS DEL ESTADO DE MEXICO<br>
 PLANTEL IXTLAHUACA</font><br>
 <font face="Franklin Gothic Medium" size="5">Elaborado por: Brayan Piña Canuto  Grupo: 404  Nl; 24<br>
